--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Promise and Async Await Operations</h1>
     <!-- <script src="./app.js"></script> -->
     <script src="./promise-async-await-1.js"></script>
+    <script src="./promise-api.js"></script>
 </body>
 </html>
