--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Promise and Async Await Operations</h1>
+    <h1 style="text-align: center; font-size: 20px;">Promise and Async Await Operations</h1>
     <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./promise-async-await-1.js"></script>
+
+    <script src="./promise-api.js"></script> -->
+    <!-- <script src="./example.js"></script> -->
     <script src="./promise-async-await-1.js"></script>
-    <script src="./promise-api.js"></script>
 </body>
 </html>
